--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "rdf-namespaces": "^1.9.2",
     "rxjs": "~7.5.0",
+    "solid-auth-client": "^2.5.6",
+    "tripledoc": "^4.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
