Added Todo and Header functionality

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@inrupt/solid-client": "^1.23.3",
+    "@inrupt/solid-client-authn-browser": "^1.12.2",
     "@inrupt/vocab-common-rdf": "^1.0.5",
     "rdf-namespaces": "^1.9.2",
     "rxjs": "~7.5.0",
